QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Due to some trouble with newer Qt >= 4.4 applications regarding font
  size configuration, a new global user option is now available to the
  rescue: Setup/Misc/Defaults/Base font size (default is no-op).


0.3.3  2008-06-07  Patchbay JACK-MIDI, file logging and X11 uniqueness.

- Attempt to load Qt's own translation support and get rid of
  the ever warning startup message, unless built in debug mode.
  (transaction by Guido Scholz, while on qsynth-devel, thanks).

- Messages file logging makes its first long overdue appearance,
  with user configurable settings in Setup/Options/Logging.

- Only one application instance is now allowed to be up and running,
  with immediate but graceful termination upon startup iif an already
  running instance is detected, which will see its main widget shown
  up and the server started automatically (Qt/X11 platform only).

- Finally, full JACK MIDI support sneaks into the patchbay; socket
  types now differ in Audio, MIDI and ALSA, following the very same
  nomenclature as found on the Connections widget tabs.

- Sun driver support (by Jacob Meuser).

- Delay window positioning at startup option is now being disabled,
  on the Setup/Misc tab, when Minimize to system tray is enabled.

- Cosmetic fix: Setup/Settings tab, 'Input Device' text label was
  using a slightly smaller font than the rest of the application
  (bug#1872545, reported by Jouni Rinne).


0.3.2  2007-12-20  Patchbay heads-up with season greetings.

- Patchbay port matching has been slightly extended, this time
  allowing for the multiple or as many-to-many connections between
  socket plugs, provided these are specified in proper regex form
  (after a patch proposed by Dave Moore, thanks).

- A new option to start the program minimized when the system tray
  icon is enabled, is now available from Setup/Misc/Start minimized